[gd_scene load_steps=67 format=3 uid="uid://bo5pw2oa4v18b"]

[ext_resource type="Script" uid="uid://c4vfrigyu3edo" path="res://Scripts/UI/lobby_scene.gd" id="1_kwwrg"]
[ext_resource type="Texture2D" uid="uid://mjkdhq7pyax6" path="res://Game Assets/Lobby Menu Assets/container.png" id="1_r6nge"]
[ext_resource type="Texture2D" uid="uid://de7xnc4hooi4h" path="res://Game Assets/Lobby Menu Assets/select_char.png" id="2_vmcsn"]
[ext_resource type="Texture2D" uid="uid://08iu60tb7cbv" path="res://Game Assets/Lobby Menu Assets/back1.png" id="3_4ttbf"]
[ext_resource type="Texture2D" uid="uid://dl06o0ms3k7br" path="res://Game Assets/Lobby Menu Assets/back2.png" id="4_1m4fw"]
[ext_resource type="Texture2D" uid="uid://cvrgd7kmgahq6" path="res://Game Assets/Lobby Menu Assets/character2.png" id="4_clcw1"]
[ext_resource type="FontFile" uid="uid://d11ytsfnlya2e" path="res://Game Assets/Lobby Menu Assets/PKMN RBYGSC.ttf" id="4_efxkb"]
[ext_resource type="Texture2D" uid="uid://ca31rbk6htf2v" path="res://Game Assets/Lobby Menu Assets/character1.png" id="5_6nhg1"]
[ext_resource type="Texture2D" uid="uid://bo4vwq8j55s3a" path="res://Game Assets/Lobby Menu Assets/ready_p1.png" id="5_vmcsn"]
[ext_resource type="Texture2D" uid="uid://bi8fw2tu5wtk3" path="res://Game Assets/Lobby Menu Assets/ready_p2.png" id="6_4ttbf"]
[ext_resource type="Texture2D" uid="uid://ngscdq4rl77b" path="res://Game Assets/Lobby Menu Assets/select_map1.png" id="7_lf5wl"]
[ext_resource type="Script" uid="uid://bvwvmw0inv8ng" path="res://Scripts/UI/P1_CharacterSelection.gd" id="7_tkudt"]
[ext_resource type="Script" uid="uid://bdqjr17c5igeg" path="res://Scripts/UI/P2_CharacterSelection.gd" id="8_6nhg1"]
[ext_resource type="Texture2D" uid="uid://d3e065788m4cj" path="res://Game Assets/Lobby Menu Assets/select_mode1.png" id="8_xu3gf"]
[ext_resource type="Texture2D" uid="uid://ctx8srkwwsok1" path="res://Game Assets/Lobby Menu Assets/start1.png" id="8_ykvvk"]
[ext_resource type="Texture2D" uid="uid://bkho1okukunof" path="res://Game Assets/Lobby Menu Assets/start2.png" id="9_xu3gf"]
[ext_resource type="Texture2D" uid="uid://4g867smo38wg" path="res://Game Assets/Lobby Menu Assets/p1_char.png" id="11_xu3gf"]
[ext_resource type="Texture2D" uid="uid://bs3nepy7snps0" path="res://Game Assets/Lobby Menu Assets/p2_char.png" id="12_0rk41"]
[ext_resource type="Texture2D" uid="uid://cjibg5a6hxdfl" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/container.png" id="13_pgqc2"]
[ext_resource type="Texture2D" uid="uid://b0plc5ja2iu2a" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/left_arrow1.png" id="15_qtlbu"]
[ext_resource type="Texture2D" uid="uid://4u3d8ytxviy4" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/left_arrow2.png" id="16_behri"]
[ext_resource type="Texture2D" uid="uid://dbce61j46spba" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/right_arrow1.png" id="17_efxkb"]
[ext_resource type="Texture2D" uid="uid://dwpu45nh4tycc" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/right_arrow2.png" id="18_veowh"]
[ext_resource type="Texture2D" uid="uid://b7nyqctkqjw2f" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/select1.png" id="19_clcw1"]
[ext_resource type="Script" uid="uid://dco0tk8rtu8jh" path="res://Scripts/UI/selectmode.gd" id="19_r66tc"]
[ext_resource type="Texture2D" uid="uid://6l8p4ycsv3k4" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/select2.png" id="20_6nhg1"]
[ext_resource type="FontFile" uid="uid://cfj0nx0o2fjph" path="res://Game Assets/Lobby Menu Assets/Mode Select Assets/pixelmix.ttf" id="21_tkudt"]
[ext_resource type="Texture2D" uid="uid://v2uww4ipwy4y" path="res://Game Assets/Lobby Menu Assets/Map Select Assets/container.png" id="23_behri"]
[ext_resource type="Texture2D" uid="uid://dtow4as14w23g" path="res://Game Assets/Lobby Menu Assets/Map Select Assets/map1.png" id="24_efxkb"]
[ext_resource type="Texture2D" uid="uid://dmhsgbvf28kgc" path="res://Game Assets/Lobby Menu Assets/select_mode2.png" id="25_x3cio"]
[ext_resource type="Script" uid="uid://bl0mc2wdgupay" path="res://Scripts/UI/selectmap.gd" id="29_x3cio"]
[ext_resource type="Texture2D" uid="uid://dmxd3xhdqge1l" path="res://Game Assets/Lobby Menu Assets/select_map2.png" id="32_klhpy"]
[ext_resource type="Texture2D" uid="uid://deomijn5hl8j7" path="res://Game Assets/Lobby Menu Assets/select_map3.png" id="33_xflo8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0rk41"]
atlas = ExtResource("7_lf5wl")
region = Rect2(461, 317, 234, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd51v"]
atlas = ExtResource("7_lf5wl")
region = Rect2(461, 317, 234, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_duf77"]
atlas = ExtResource("32_klhpy")
region = Rect2(461, 317, 234, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_bokfu"]
atlas = ExtResource("33_xflo8")
region = Rect2(461, 317, 234, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyixv"]
atlas = ExtResource("8_xu3gf")
region = Rect2(519, 436, 119, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5fha"]
atlas = ExtResource("8_xu3gf")
region = Rect2(519, 436, 119, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_6is1m"]
atlas = ExtResource("25_x3cio")
region = Rect2(519, 436, 119, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkudt"]
atlas = ExtResource("4_clcw1")
region = Rect2(875, 234, 90, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_oerlc"]
atlas = ExtResource("5_6nhg1")
region = Rect2(188, 234, 82, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2omx"]
atlas = ExtResource("5_6nhg1")
region = Rect2(188, 234, 82, 108)

[sub_resource type="ButtonGroup" id="ButtonGroup_behri"]

[sub_resource type="AtlasTexture" id="AtlasTexture_inskg"]
atlas = ExtResource("11_xu3gf")
region = Rect2(411, 152, 57, 32)

[sub_resource type="ButtonGroup" id="ButtonGroup_tkudt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gqyr7"]
atlas = ExtResource("12_0rk41")
region = Rect2(479, 152, 58, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4cty"]
atlas = ExtResource("3_4ttbf")
region = Rect2(57.1512, 488.491, 145.991, 60.5399)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf5wl"]
atlas = ExtResource("4_1m4fw")
region = Rect2(57.151, 488.491, 145.991, 60.54)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcsn"]
atlas = ExtResource("5_vmcsn")
region = Rect2(111.056, 402.742, 73.8663, 59.5169)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m4fw"]
atlas = ExtResource("6_4ttbf")
region = Rect2(802.297, 403.527, 73.4299, 58.4162)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2jp"]
atlas = ExtResource("8_ykvvk")
region = Rect2(922, 490, 173, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_vveka"]
atlas = ExtResource("9_xu3gf")
region = Rect2(922, 490, 173, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwwrg"]
atlas = ExtResource("13_pgqc2")
region = Rect2(350, 123, 450, 504)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66tc"]
atlas = ExtResource("15_qtlbu")
region = Rect2(443, 198, 51, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3cio"]
atlas = ExtResource("16_behri")
region = Rect2(443, 198, 51, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_xynpv"]
atlas = ExtResource("17_efxkb")
region = Rect2(659, 198, 51, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_klhpy"]
atlas = ExtResource("18_veowh")
region = Rect2(659, 198, 51, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtlbu"]
atlas = ExtResource("8_xu3gf")
region = Rect2(519, 436, 119, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_724om"]
atlas = ExtResource("25_x3cio")
region = Rect2(519, 436, 119, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_xflo8"]
atlas = ExtResource("19_clcw1")
region = Rect2(468, 519, 220, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwa3j"]
atlas = ExtResource("20_6nhg1")
region = Rect2(468, 519, 220, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_veowh"]
atlas = ExtResource("23_behri")
region = Rect2(350, 123, 450, 504)

[sub_resource type="AtlasTexture" id="AtlasTexture_clcw1"]
atlas = ExtResource("24_efxkb")
region = Rect2(461, 191, 231, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrcx1"]
atlas = ExtResource("32_klhpy")
region = Rect2(461, 317, 234, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a22f"]
atlas = ExtResource("33_xflo8")
region = Rect2(461, 317, 234, 115)

[node name="LobbyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwwrg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_r6nge")

[node name="Characters" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_vmcsn")

[node name="select_map" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -8.0
offset_right = 117.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_0rk41")
texture_pressed = SubResource("AtlasTexture_0rk41")

[node name="Map1" type="TextureRect" parent="select_map"]
layout_mode = 0
offset_right = 234.0
offset_bottom = 115.0
texture = SubResource("AtlasTexture_pd51v")

[node name="Map2" type="TextureRect" parent="select_map"]
visible = false
layout_mode = 0
offset_right = 234.0
offset_bottom = 115.0
texture = SubResource("AtlasTexture_duf77")

[node name="Map3" type="TextureRect" parent="select_map"]
visible = false
layout_mode = 0
offset_right = 234.0
offset_bottom = 115.0
texture = SubResource("AtlasTexture_bokfu")

[node name="select_mode" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -210.0
offset_right = 59.5
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_yyixv")
texture_pressed = SubResource("AtlasTexture_yyixv")

[node name="Mode1" type="TextureRect" parent="select_mode"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_c5fha")

[node name="Mode2" type="TextureRect" parent="select_mode"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_6is1m")

[node name="PlayerCharacters" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ballerina_p1" type="TextureRect" parent="PlayerCharacters"]
visible = false
layout_mode = 0
offset_left = 179.0
offset_top = 234.0
offset_right = 269.0
offset_bottom = 342.0
texture = SubResource("AtlasTexture_tkudt")

[node name="name" type="Label" parent="PlayerCharacters/Ballerina_p1"]
layout_mode = 0
offset_left = -107.0
offset_top = 133.0
offset_right = 256.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 25
text = "Ballerina Cappuccina"

[node name="Ballerina_p2" type="TextureRect" parent="PlayerCharacters"]
visible = false
layout_mode = 0
offset_left = 875.0
offset_top = 234.0
offset_right = 965.0
offset_bottom = 342.0
texture = SubResource("AtlasTexture_tkudt")

[node name="name" type="Label" parent="PlayerCharacters/Ballerina_p2"]
layout_mode = 0
offset_left = -124.0
offset_top = 132.0
offset_right = 239.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 25
text = "Ballerina Cappuccina"

[node name="Sahur_p1" type="TextureRect" parent="PlayerCharacters"]
visible = false
layout_mode = 0
offset_left = 188.0
offset_top = 234.0
offset_right = 270.0
offset_bottom = 342.0
texture = SubResource("AtlasTexture_oerlc")

[node name="name" type="Label" parent="PlayerCharacters/Sahur_p1"]
layout_mode = 0
offset_left = -121.0
offset_top = 135.0
offset_right = 251.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 25
text = "Tung tung tung Sahur"

[node name="Sahur_p2" type="TextureRect" parent="PlayerCharacters"]
visible = false
layout_mode = 0
offset_left = 885.0
offset_top = 234.0
offset_right = 967.0
offset_bottom = 342.0
texture = SubResource("AtlasTexture_m2omx")

[node name="name" type="Label" parent="PlayerCharacters/Sahur_p2"]
layout_mode = 0
offset_left = -140.0
offset_top = 132.0
offset_right = 232.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 25
text = "Tung tung tung Sahur"

[node name="PlayerNameBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -427.0
offset_top = 160.0
offset_right = 427.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_constants/separation = 520

[node name="Player1" type="Label" parent="PlayerNameBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 30
text = "Player 1"

[node name="Player2" type="Label" parent="PlayerNameBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("4_efxkb")
theme_override_font_sizes/font_size = 30
text = "Player 2"

[node name="P1_MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 151.0
offset_right = 752.0
offset_bottom = 223.0

[node name="HBoxContainer" type="HBoxContainer" parent="P1_MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("7_tkudt")

[node name="P1_Character1" type="TextureButton" parent="P1_MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_behri")
texture_pressed = SubResource("AtlasTexture_inskg")

[node name="P1_Character2" type="TextureButton" parent="P1_MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_behri")
texture_pressed = SubResource("AtlasTexture_inskg")

[node name="P1_Character3" type="TextureButton" parent="P1_MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_behri")
texture_pressed = SubResource("AtlasTexture_inskg")

[node name="P1_Character4" type="TextureButton" parent="P1_MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_behri")
texture_pressed = SubResource("AtlasTexture_inskg")

[node name="P1_Character5" type="TextureButton" parent="P1_MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_behri")
texture_pressed = SubResource("AtlasTexture_inskg")

[node name="P2_MarginContainer2" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 412.0
offset_top = 151.0
offset_right = 752.0
offset_bottom = 223.0

[node name="HBoxContainer" type="HBoxContainer" parent="P2_MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("8_6nhg1")

[node name="P2_Character1" type="TextureButton" parent="P2_MarginContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tkudt")
texture_pressed = SubResource("AtlasTexture_gqyr7")

[node name="P2_Character2" type="TextureButton" parent="P2_MarginContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tkudt")
texture_pressed = SubResource("AtlasTexture_gqyr7")

[node name="P2_Character3" type="TextureButton" parent="P2_MarginContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tkudt")
texture_pressed = SubResource("AtlasTexture_gqyr7")

[node name="P2_Character4" type="TextureButton" parent="P2_MarginContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tkudt")
texture_pressed = SubResource("AtlasTexture_gqyr7")

[node name="P2_Character5" type="TextureButton" parent="P2_MarginContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tkudt")
texture_pressed = SubResource("AtlasTexture_gqyr7")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackToMenu" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 58.0
offset_top = 488.0
offset_right = 203.0
offset_bottom = 548.0
texture_normal = SubResource("AtlasTexture_j4cty")
texture_pressed = SubResource("AtlasTexture_lf5wl")

[node name="p1_ready" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 111.0
offset_top = 403.0
offset_right = 184.0
offset_bottom = 462.0
toggle_mode = true
texture_pressed = SubResource("AtlasTexture_vmcsn")

[node name="p2_ready" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 802.0
offset_top = 404.0
offset_right = 875.0
offset_bottom = 462.0
toggle_mode = true
texture_pressed = SubResource("AtlasTexture_1m4fw")

[node name="Start" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 920.0
offset_top = 490.0
offset_right = 1093.0
offset_bottom = 548.0
texture_normal = SubResource("AtlasTexture_5a2jp")
texture_pressed = SubResource("AtlasTexture_vveka")

[node name="Selectmode" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("19_r66tc")

[node name="BackToLobby" type="Button" parent="Selectmode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Selectmode/BackToLobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.154876, 0.154876, 0.154876, 0.756863)

[node name="Container" type="TextureRect" parent="Selectmode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -198.0
offset_right = 225.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kwwrg")

[node name="left_right_buttons" type="HBoxContainer" parent="Selectmode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -125.0
offset_right = 131.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 160

[node name="Left" type="TextureButton" parent="Selectmode/left_right_buttons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_r66tc")
texture_pressed = SubResource("AtlasTexture_x3cio")

[node name="Right" type="TextureButton" parent="Selectmode/left_right_buttons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_xynpv")
texture_pressed = SubResource("AtlasTexture_klhpy")

[node name="Modes" type="Control" parent="Selectmode"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mode1" type="TextureRect" parent="Selectmode/Modes"]
layout_mode = 0
offset_left = 519.0
offset_top = 191.0
offset_right = 634.0
offset_bottom = 310.0
texture = SubResource("AtlasTexture_qtlbu")

[node name="Mode2" type="TextureRect" parent="Selectmode/Modes"]
layout_mode = 0
offset_left = 519.0
offset_top = 191.0
offset_right = 638.0
offset_bottom = 313.0
texture = SubResource("AtlasTexture_724om")

[node name="Select" type="TextureButton" parent="Selectmode"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -132.0
offset_right = 110.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_xflo8")
texture_pressed = SubResource("AtlasTexture_qwa3j")

[node name="Description" type="VBoxContainer" parent="Selectmode"]
layout_mode = 0
offset_left = 385.0
offset_top = 334.0
offset_right = 780.0
offset_bottom = 514.0
theme_override_constants/separation = 10

[node name="Gamemode" type="Label" parent="Selectmode/Description"]
layout_mode = 2
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("21_tkudt")
theme_override_font_sizes/font_size = 25
text = "[game mode]"

[node name="Description" type="RichTextLabel" parent="Selectmode/Description"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_colors/default_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/normal_font = ExtResource("4_efxkb")
theme_override_font_sizes/normal_font_size = 25
text = "[description]




"
fit_content = true

[node name="Selectmap" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("29_x3cio")

[node name="BackToLobby" type="Button" parent="Selectmap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Selectmap/BackToLobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.154876, 0.154876, 0.154876, 0.756863)

[node name="Container" type="TextureRect" parent="Selectmap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -201.0
offset_right = 225.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_veowh")

[node name="Maps" type="Control" parent="Selectmap"]
anchors_preset = 0
offset_left = -1.0
offset_right = 39.0
offset_bottom = 40.0

[node name="Map1" type="TextureRect" parent="Selectmap/Maps"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 441.5
offset_top = 175.0
offset_right = 672.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_clcw1")

[node name="Map2" type="TextureRect" parent="Selectmap/Maps"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 441.5
offset_top = 175.0
offset_right = 672.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_nrcx1")

[node name="Map3" type="TextureRect" parent="Selectmap/Maps"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 441.5
offset_top = 175.0
offset_right = 672.5
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_0a22f")

[node name="left_right_buttons" type="HBoxContainer" parent="Selectmap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -125.0
offset_right = 130.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300

[node name="Left" type="TextureButton" parent="Selectmap/left_right_buttons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_r66tc")
texture_pressed = SubResource("AtlasTexture_x3cio")

[node name="Right" type="TextureButton" parent="Selectmap/left_right_buttons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_xynpv")
texture_pressed = SubResource("AtlasTexture_klhpy")

[node name="Select" type="TextureButton" parent="Selectmap"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -132.0
offset_right = 109.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_xflo8")
texture_pressed = SubResource("AtlasTexture_qwa3j")

[node name="Description" type="VBoxContainer" parent="Selectmap"]
layout_mode = 0
offset_left = 385.0
offset_top = 334.0
offset_right = 766.0
offset_bottom = 514.0
theme_override_constants/separation = 10

[node name="Gamemode" type="Label" parent="Selectmap/Description"]
layout_mode = 2
theme_override_colors/font_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/font = ExtResource("21_tkudt")
theme_override_font_sizes/font_size = 25
text = "[game mode]"

[node name="Description" type="RichTextLabel" parent="Selectmap/Description"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_colors/default_color = Color(0.164706, 0.156863, 0.219608, 1)
theme_override_fonts/normal_font = ExtResource("4_efxkb")
theme_override_font_sizes/normal_font_size = 25
text = "[description]




"
fit_content = true

[connection signal="pressed" from="select_map" to="." method="_on_select_map_pressed"]
[connection signal="pressed" from="select_mode" to="." method="_on_select_mode_pressed"]
[connection signal="pressed" from="Buttons/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Selectmode/BackToLobby" to="Selectmode" method="_on_back_to_lobby_pressed"]
[connection signal="pressed" from="Selectmode/left_right_buttons/Left" to="Selectmode" method="_on_left_pressed"]
[connection signal="pressed" from="Selectmode/left_right_buttons/Right" to="Selectmode" method="_on_right_pressed"]
[connection signal="pressed" from="Selectmode/Select" to="Selectmode" method="_on_select_pressed"]
[connection signal="pressed" from="Selectmap/BackToLobby" to="Selectmap" method="_on_back_to_lobby_pressed"]
[connection signal="pressed" from="Selectmap/left_right_buttons/Left" to="Selectmap" method="_on_left_pressed"]
[connection signal="pressed" from="Selectmap/left_right_buttons/Right" to="Selectmap" method="_on_right_pressed"]
[connection signal="pressed" from="Selectmap/Select" to="Selectmap" method="_on_select_pressed"]
